# ks-scmc-gui

./: .gitignore  1  CMakeLists.txt  README.en.md  README.md
client/: CMakeLists.txt  ReadMe  build.sh
client/config/: CMakeLists.txt  ks-scmc.desktop.in
client/data/images/: CMakeLists.txt
client/data/style/: theme.qss
client/rpc/: Makefile  common.pb.cc  common.pb.h  container_service.grpc.pb.cc  container_service.grpc.pb.h  container_service.pb.cc  container_service.pb.h  container_types.pb.cc  container_types.pb.h  image_service.grpc.pb.cc  image_service.grpc.pb.h  image_service.pb.cc  image_service.pb.h  image_types.pb.cc  image_types.pb.h  network_service.grpc.pb.cc  network_service.grpc.pb.h  network_service.pb.cc  network_service.pb.h  network_types.pb.cc  network_types.pb.h  node_service.grpc.pb.cc  node_service.grpc.pb.h  node_service.pb.cc  node_service.pb.h  node_types.pb.cc  node_types.pb.h  user_service.grpc.pb.cc  user_service.grpc.pb.h  user_service.pb.cc  user_service.pb.h  user_types.pb.cc  user_types.pb.h
client/src/: CMakeLists.txt  main-window.cpp  main-window.h  main-window.ui  main.cpp  rpc_channel.cpp
client/src/common/: button-delegate.cpp  button-delegate.h  common-page.cpp  common-page.h  common-page.ui  configgroup.h  configmodel.h  configtable.cpp  configtable.h  configtable.ui  configview.cpp  configview.h  def.h  guide-item.h  guide-item.ui  header-view.h  info-worker.cpp  info-worker.h  mask-widget.h  message-dialog.cpp  operatewidget.cpp  operatewidget.h  operatewidget.ui
client/src/include/: rpc.h
client/src/pages/container/: container-list.cpp  container-list.h  container-setting.cpp
client/src/pages/image/: image-manager.cpp  image-manager.h  image-operate.cpp  image-operate.ui
client/src/pages/node/: node-addition.cpp  node-addition.ui  node-list.cpp  node-list.h
client/src/pages/user/: login.cpp  login.h  login.ui
client/translations/: ks-scmc.zh_CN.ts
config/: CMakeLists.txt  config.h.in  ks-scmc-gui.desktop.in  ks-scmc-gui.sh
src/: CMakeLists.txt  activate-page.cpp  activate-page.h  error-message-box.cpp  error-message-box.h  login-dialog.cpp  login-dialog.h  login-dialog.ui  main-window.cpp  main-window.h  main-window.ui  main.cpp  rpc_channel.cpp
src/base/: info-worker.cpp  info-worker.h  load-configuration.cpp  load-configuration.h  subscribe-thread.cpp  subscribe-thread.h  user-configuration.cpp  user-configuration.h
src/common/: .button-delegate.cpp.swp  about-page.cpp  about-page.h  bubble-tip-button.cpp  bubble-tip-button.h  button-delegate.cpp  button-delegate.h  common-page.cpp  config-group.cpp  config-group.h  config-model.cpp  config-model.h  config-operate-widget.cpp  config-operate-widget.h  config-operate-widget.ui  config-table.cpp  config-table.h  config-view.cpp  config-view.h  configgroup.cpp  configmodel.cpp  def.h  guide-item.cpp  guide-item.h  guide-item.ui  header-view.cpp  header-view.h  info-worker.cpp  info-worker.h  license.h  mask-widget.cpp  mask-widget.h  message-dialog.cpp  message-dialog.h  message-dialog.ui  monitor-content.cpp  monitor-content.h  monitor-content.ui  monitor-dialog.cpp  monitor-dialog.h  (+16 more)
src/common/date-picker/: calendar-widget.cpp  calendar-widget.h  date-pick-button.cpp  date-pick-button.h  date-picker.cpp  date-picker.h
src/dbus/: dbus-utils.cpp  dbus-utils.h
src/include/: rpc.h
src/pages/: common-page.cpp  common-page.h  common-page.ui  page.cpp  page.h  stacked-page.cpp  stacked-page.h  tab-page.cpp  tab-page.h  table-page.cpp  table-page.h  table-page.ui
src/pages/audit/audit-list/: audit-list-page.cpp  audit-list-page.h
src/pages/audit/log-list/: log-list-page.cpp  log-list-page.h  log-list-view.cpp  log-list-view.h
src/pages/audit/warning-list/: warning-list-page.cpp  warning-list-page.h  warning-list-view.cpp  warning-list-view.h
src/pages/container/: container-list-page.cpp  container-list-page.h  container-list.cpp  container-list.h  container-setting.cpp  container-setting.h  container-setting.ui
src/pages/container/advanced-configuration/: envs-conf-page.ui  envs-conf-tab.cpp  envs-conf-tab.h  envs-conf-tab.ui  graphic-conf-page.cpp  graphic-conf-page.h  graphic-conf-page.ui  graphic-conf-tab.cpp  graphic-conf-tab.h  graphic-conf-tab.ui  high-availability-page.cpp  high-availability-tab.cpp  high-availability-tab.h  high-availability-tab.ui  volumes-conf-page.cpp  volumes-conf-page.ui  volumes-conf-tab.cpp  volumes-conf-tab.h  volumes-conf-tab.ui
src/pages/container/base-configuration/: cpu-conf-page.cpp  cpu-conf-tab.cpp  cpu-conf-tab.h  cpu-conf-tab.ui  memory-conf-page.h  memory-conf-tab.cpp  memory-conf-tab.h  memory-conf-tab.ui  network-conf-page.cpp  network-conf-page.h  network-conf-tab.cpp  network-conf-tab.h  network-conf-tab.ui
src/pages/image/: global-security-controller.cpp  global-security-controller.h  image-approval-page.cpp  image-approval-page.h  image-list-page.cpp  image-list-page.h  image-manager-page.cpp  image-manager-page.h  image-manager.cpp  image-manager.h  image-operate-dialog.cpp  image-operate-dialog.h  image-operate-dialog.ui  image-operate.cpp  image-operate.h  image-operate.ui  security-switch-page.cpp  security-switch-page.h  transmission-item.cpp  transmission-item.h  transmission-item.ui  transmission-list.cpp  transmission-list.h
src/pages/node/: node-addition-dialog.cpp  node-addition-dialog.h  node-addition-dialog.ui  node-addition.h  node-info-page.cpp  node-info-page.h  node-list-page.cpp  node-list-page.h  node-list.cpp  node-list.h  node-operate-dialog.cpp  node-operate-dialog.h  node-operate-dialog.ui  node-page-manager.cpp  node-page-manager.h
src/pages/node/config/: node-config-page.cpp  (+2 more)
src/pages/outline/: outline-cell.cpp  outline-cell.h  outline-cell.ui  outline-introduction.cpp  outline-introduction.h  outline-introduction.ui  outline-status-icon.cpp  outline-status-icon.h  outline-view.cpp  outline-view.h
src/pages/user/: login.cpp  login.h  login.ui  passwd-update-dialog.cpp  passwd-update-dialog.h  passwd-update-dialog.ui  server-config-dialog.cpp  server-config-dialog.h
(+85 files in other folders)
